--- a/composer.json
+++ b/composer.json
@@ -31,12 +31,12 @@
         "itk-dev/azure-key-vault-php": "^1.0",
         "jms/serializer": "^3.18",
         "php-http/guzzle7-adapter": "^1.0",
-        "symfony/cache": "^5.4 || ^6.0",
-        "symfony/http-client": "^5.4 || ^6.0",
-        "symfony/options-resolver": "^5.4 || ^6.0",
-        "symfony/property-access": "^4.4 || ^5.4 || ^6.0",
-        "symfony/string": "^5.4 || ^6.0",
-        "symfony/uid": "^5.4 || ^6.0",
+        "symfony/cache": "^5.4 || ^6.0 || ^7.0",
+        "symfony/http-client": "^5.4 || ^6.0 || ^7.0",
+        "symfony/options-resolver": "^5.4 || ^6.0 || ^7.0",
+        "symfony/property-access": "^4.4 || ^5.4 || ^6.0 || ^7.0",
+        "symfony/string": "^5.4 || ^6.0 || ^7.0",
+        "symfony/uid": "^5.4 || ^6.0 || ^7.0",
         "wsdltophp/packagebase": "^5.0"
     },
     "require-dev": {
